fix style in footer(align items)

--- a/app/components/footer/footer.styl
+++ b/app/components/footer/footer.styl
@@ -10,10 +10,10 @@
     flex-wrap wrap
     align-items center
     .logo
-      width 25%
+      min-width 10%
     .soc-links
       display flex
-      width 25%
+      min-width 10%
       justify-content flex-end
       text-transform uppercase
       a
